# aquascope

./: Cargo.toml  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml  standalone.yml
crates/aquascope/: Cargo.toml
crates/aquascope/src/: lib.rs  test_utils.rs
crates/aquascope/src/analysis/: find_bindings.rs  mod.rs  scrape_hir.rs
crates/aquascope/src/analysis/boundaries/: mod.rs  path_visitor.rs
crates/aquascope/src/analysis/ir_mapper/: mir_locations.rs  mod.rs  post_dominators.rs
crates/aquascope/src/analysis/permissions/: context.rs  flow.rs  mod.rs  output.rs  utils.rs
crates/aquascope/src/analysis/stepper/: hir_steps.rs  mod.rs  segmented_mir.rs  table_builder.rs
crates/aquascope/src/errors/: silent.rs
crates/aquascope/src/interpreter/: mapper.rs  miri_utils.rs  mod.rs  mvalue.rs  step.rs
crates/aquascope/tests/: permissions.rs
crates/aquascope/tests/interpreter/: book-example.test  vec.test
crates/aquascope/tests/refinement/: return_a_string.test
crates/aquascope/tests/snapshots/: boundaries__(anon.body)@closure_1.test.snap  boundaries__add_big_strings@closure_1.test.snap  boundaries__add_ref@add_ref.test.snap  boundaries__arr@array.test.snap  boundaries__bar@moved_0.test.snap  boundaries__bx@box.test.snap  boundaries__dangling_pointer@dangling_pointer.test.snap  boundaries__main@captured_0.test.snap  boundaries__make_a_cloner@captured_0.test.snap  boundaries__missing_constraint@missing_constraint.test.snap  boundaries__moveit@match_1.test.snap  boundaries__mut_arr@array.test.snap  boundaries__mut_bx@box.test.snap  boundaries__mut_slice@array.test.snap  boundaries__mutate@deref_assign_0.test.snap  boundaries__refit@match_1.test.snap  boundaries__slice@array.test.snap  boundaries__test@deref_assign_0.test.snap  boundaries__with_int@array_1.test.snap  boundaries__with_string@array_1.test.snap  interpreter__basic.test.snap  interpreter__book-example.test.snap  interpreter__closure.test.snap  interpreter__nested-ref.test.snap  interpreter__stackref.test.snap  interpreter__tuple.test.snap  interpreter__vec.test.snap  stepper__(anon.body)@big_strings.test.snap  stepper__add_big_strings@big_strings.test.snap  stepper__add_big_strings@closure_0.test.snap  stepper__ascii_capitalize@if_3.test.snap  stepper__foo@if_4.test.snap  stepper__foo@match_0.test.snap
crates/aquascope/tests/steps/: big_strings.test
crates/aquascope_front/: Cargo.toml
crates/aquascope_front/src/: lib.rs  plugin.rs
crates/aquascope_serve/: Cargo.toml
crates/aquascope_serve/src/: container.rs  main.rs  server.rs
crates/aquascope_workspace_utils/: Cargo.toml
crates/aquascope_workspace_utils/src/: lib.rs
crates/mdbook-aquascope/: Cargo.toml
crates/mdbook-aquascope/src/: main.rs  preprocessor.rs
crates/mdbook-aquascope/test-book/: book.toml
frontend/: pnpm-lock.yaml
