[package]
name = "aquascope"
version = "0.1.0"
license = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
description = "Permissions analyzer for Rust code"
publish = false

[package.metadata.rust-analyzer]
rustc_private = true

[features]
testing = []

[dependencies]
anyhow.workspace = true
log = "0.4"
itertools = "0.10.5"
serde.workspace = true
ts-rs = "7"
regex = "1"
fluid-let = "1.0"
fuzzy_match = "0.2.1"
rustc_utils = {workspace = true, features = ["ts-rs", "serde", "test"]}

# interpret module
miri = {git = "https://github.com/rust-lang/miri", rev = "e88582ada7b20800d4257f13634d4e54b9757a9f"}
aquascope_workspace_utils = { version = "0.4", path = "../aquascope_workspace_utils" }

# testing utils
lazy_static = { version = "1.4" }

[dev-dependencies]
insta = { version = "1.22.0", features = ["json", "yaml", "redactions"] }
aquascope = { path = ".", features = ["testing"] }
env_logger = "0.9.3"
test-log = "0.2.11"
