[package]
name = "aquascope_serve"
version = "0.1.0"
license = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
default-run = "aquascope_serve"
publish = false

[dependencies]
anyhow = "1"
aquascope_workspace_utils = {version = "0.4",  path = "../aquascope_workspace_utils"}
async-trait = "0.1.52"
axum = { version = "0.5" }
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.0"
serde.workspace = true
serde_json = "1.0"
snafu = "0.7.0"
tokio = { version = "1", features = ["macros", "time", "process", "rt-multi-thread"] }
tower-http = { version = "0.3", features = ["cors", "trace"] }
tar = "0.4"
tempfile = "3.3.0"
