[package]
name = "aquascope_workspace_utils"
version = "0.4.0"
license = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
description = "Handy utilities for working in the Aquascope workspace"
include = [
  "src/**/*",
  "Cargo.toml",
  "rust-toolchain.toml"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
anyhow = "1"
serde = { workspace = true }
